<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/transfer_msg"
        android:id="@+id/tv_tranfer_msg"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/medium_mrgn"
        android:layout_marginTop="@dimen/medium_mrgn"
        android:paddingLeft="@dimen/medium_mrgn"
        android:paddingRight="@dimen/medium_mrgn"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/transfer_nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transfer_nominal"
            android:inputType="numberDecimal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true"
            android:backgroundTint="#EF1414" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/transfer_write_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/transfer_write_msg"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:backgroundTint="#EF1414" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:minWidth="@dimen/btn_minwidth_vert"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/lbl_btn_send"
        android:id="@+id/transfer_btn_send"
        android:layout_gravity="center_horizontal"
        android:background="#EF1414"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer_asking_add_balance"
        android:id="@+id/tv_asking_add_balance"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:minWidth="@dimen/btn_minwidth_vert"
        android:text="@string/ctr_add_balance"
        android:id="@+id/transfer_btn_add_balance"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:maxLength="100"
        android:background="#EF1414"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/transfer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_address"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"
        android:autoText="false"
        android:backgroundTint="#EF1414" />

</LinearLayout>