<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:background="#ffffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/confirm_msg"
        android:id="@+id/tv_confir_msg"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/medium_mrgn"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/medium_mrgn"
        android:paddingLeft="@dimen/medium_mrgn"
        android:paddingRight="@dimen/medium_mrgn"/>


    <Spinner
        android:id="@+id/confirm_select_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/bank_dummy"
        android:spinnerMode="dialog"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:layout_gravity="bottom"
        android:backgroundTint="#EF1414" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/confirm_user_account_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_user_account"
            android:inputType="textPersonName"
            android:layout_marginLeft="30dp"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:layout_marginRight="30dp"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true"
            android:backgroundTint="#EF1414" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/confirm_nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transfer_nominal"
            android:inputType="numberDecimal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:imeOptions="actionNext"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:maxLines="1"
            android:singleLine="true"
            android:backgroundTint="#EF1414" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/confirm_write_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_write_msg"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:inputType="text"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:imeOptions="actionDone"
            android:backgroundTint="#EF1414" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:minWidth="@dimen/btn_minwidth_vert"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:text="@string/confirm_btn_upload"
        android:id="@+id/confirm_btn_upload"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_rounded"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_asking_upload_pic"
        android:id="@+id/tv_asking_upload_pic"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:textAlignment="center"
        android:gravity="center" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:minWidth="@dimen/btn_minwidth_vert"
        android:text="@string/confirm_btn_file"
        android:id="@+id/confirm_btn_select_file"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:background="@drawable/button_rounded" />

</LinearLayout>