<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/medium_mrgn">


        <Button
            android:id="@+id/mkios_credit_topup_pertama"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="38dp"
            android:hint="@string/mkios_dsb_topup_credit"
            android:textColor="#ffffff"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:minWidth="@dimen/btn_minwidth_vert"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_rounded"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textColorHint="#ffffff" />


        <Button
                android:id="@+id/mkios_credit_tranfer"
                android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
                android:layout_height="38dp"
            android:textColor="#ffffff"
                android:hint="@string/mkios_dsb_credit_transfer"
                android:maxLines="1"
                android:singleLine="true"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="center"
            android:minWidth="@dimen/btn_minwidth_vert"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_rounded"
                android:layout_marginTop="10dp"
            android:textColorHint="#ffffff" />
            <Button
                android:id="@+id/mkios_data_packet_transfer"
                android:layout_width="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_height="38dp"
                android:hint="@string/mkios_dsb_data_packet_transfer"
                android:maxLines="1"
                android:singleLine="true"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="center"
                android:minWidth="@dimen/btn_minwidth_vert"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_rounded"
                android:layout_marginTop="10dp"
                android:textColorHint="#ffffff" />


        <Button
            android:id="@+id/mkios_data_saldo_tdk_mencukupi"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="38dp"
            android:hint="@string/transfer_asking_add_balance"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textAlignment="center"
            android:minWidth="@dimen/btn_minwidth_vert"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="10dp"
            android:textColorHint="#ffffff" />


        <Button
            android:id="@+id/mkios_data_refresh_kartu"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="38dp"
            android:hint="@string/mkios_dsb_refresh_kartu"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:minWidth="@dimen/btn_minwidth_vert"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="10dp"
            android:textColorHint="#ffffff" />

        <Button
            android:id="@+id/mkios_data_cek_status"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/mkios_dsb_cek_status"
            android:maxLines="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:minWidth="@dimen/btn_minwidth_vert"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="10dp"
            android:textColorHint="#ffffff" />

        <Button
            android:id="@+id/mkios_data_cek_stock"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#ffffff"
            android:layout_height="38dp"
            android:hint="@string/mkios_dsb_cek_stock"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textAlignment="center"
            android:minWidth="@dimen/btn_minwidth_vert"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="10dp"
            android:textColorHint="#ffffff" />


        <Button
            android:id="@+id/mkios_data_nsp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/mkios_dsb_nsp"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textAlignment="center"
            android:minWidth="@dimen/btn_minwidth_vert"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_rounded"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:textColorHint="#ffffff" />


        <Button
            android:id="@+id/mkios_data_layanan_tdc"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/mkios_dsb_layanan_tdc"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:minWidth="@dimen/btn_minwidth_vert"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="10dp"
            android:textColorHint="#ffffff" />

        <Button
            android:id="@+id/mkios_data_ctr_add_balance"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/ctr_add_balance"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:minWidth="@dimen/btn_minwidth_vert"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="10dp"/>



    </LinearLayout>

</LinearLayout>